--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <div class="footer">
         Made with <span class="heart">♥</span> by Candy
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
